# influx

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  influx.example.toml  pyproject.toml
.ralph/: ralph++.yaml
docker/: .env.example  Dockerfile  docker-compose.yml  run.sh
docs/: AGENT_ZERO_RFC.md  REQUIREMENTS.md  SPECIFICATION.md
docs/agents/: domain.md  issue-tracker.md
docs/operations/: staging-runbook.md
integrations/agent_zero/usr/: influx_rfc.py
scripts/: influx-diagnose.py  influx-report.py
scripts/ralph/: .base-sha  .last-branch  .run-counters  prd.json  progress.txt
scripts/ralph/archive/2026-04-24-02-cli-errors-http-client/: prd.json
scripts/ralph/archive/2026-04-24-03-http-api-scheduler/: prd.json
scripts/ralph/archive/2026-04-24-config-schema/: prd.json
scripts/ralph/archive/2026-04-25-04-arxiv-filter-notes/: prd.json
scripts/ralph/archive/2026-04-25-05-mcp-client-webhook/: prd.json
scripts/ralph/archive/2026-04-25-06-repair-sweep/: prd.json  progress.txt
scripts/ralph/archive/2026-04-26-07-extraction-enrichment/: prd.json  progress.txt
scripts/ralph/archive/2026-04-26-08-lcma-integration/: prd.json  progress.txt
scripts/ralph/archive/2026-04-26-rss-multiprofile-backfill/: prd.json
src/influx/: __init__.py  __main__.py  backfill.py  cascade.py  config.py  coordinator.py  dedup.py  enrich.py  errors.py  feedback.py  filter.py  http_api.py  http_client.py  lcma.py  lcma_wiring.py  lithos_client.py  logging_config.py  main.py  metrics.py  notes.py  notifications.py  probes.py  prompts.py  rejection_rate.py  renderer.py  repair.py  repair_counters.py  repair_hooks.py  run.py  run_ledger.py  run_service.py  scheduler.py  schemas.py  service.py  slugs.py  source.py  storage.py  telemetry.py  urls.py
src/influx/extraction/: __init__.py  article.py  html.py  pdf.py  pipeline.py
src/influx/sources/: __init__.py  arxiv.py  rss.py
tasks/: prd-05-mcp-client-webhook.md  prd-06-repair-sweep.md  prd-07-extraction-enrichment.md  prd-08-lcma.md  prd-09-rss-multiprofile-backfill.md  prd-10-telemetry-polish.md
tests/: conftest.py  test_main.py
tests/contract/: test_lcma_calls.py  test_lithos_client.py
tests/fixtures/: golden_note.md
tests/fixtures/arxiv/: empty_feed.atom  mixed_dates.atom  recent_two.atom  single_entry.atom
tests/fixtures/extraction/: good_article.html  short_article.html  short_web_article.html  web_article.html  web_with_script.html  with_embed.html  with_iframe.html  with_object.html  with_script.html
tests/fixtures/rss/: collision_atom.xml  sample_atom.xml  sample_rss2.xml
tests/integration/: test_arxiv_html_to_full_text.py  test_arxiv_pdf_fallback.py  test_arxiv_pipeline_end_to_end.py  test_arxiv_to_lithos.py  test_backfill_arxiv.py  test_backfill_exclusion.py  test_cli_http.py  test_coordinator_slot.py  test_fetch_dedup.py  test_http_api.py  test_lcma_edges_end_to_end.py  test_multi_profile_shared_source.py  test_otel_absent_service.py  test_otel_metrics.py  test_otel_spans.py  test_profile_rejection_authority.py  test_repair_sweep_abstract_only.py  test_repair_sweep_advancement.py  test_repair_sweep_archive_only.py  test_repair_sweep_chronic_oversize.py  test_repair_sweep_high_score_terminal.py  test_rss_to_lithos.py  test_serve.py
tests/meta/: test_no_stubs.py  test_v1_gate.py
tests/unit/: test_archive_download.py  test_archive_path.py  test_archive_url_hash.py  test_article_extraction.py  test_arxiv_fetcher.py  test_backfill_estimator.py  test_build_arxiv_note_item.py  test_builds_on_arxiv_id_extraction.py  test_cascade.py  test_cli_dispatch.py  test_config.py  test_coordinator.py  test_dedup_query.py  test_diagnose_squatters.py  test_enrich.py  test_errors.py  test_extraction_pipeline.py  test_feedback.py  test_filter.py  test_filter_batch_size.py  test_full_text_render.py  test_html_extraction.py  test_http_client.py  test_lcma_query_composition.py  test_lcma_wiring.py  test_lithos_client.py  test_logging_config.py  test_main.py  test_metrics_module.py  test_multi_profile_merge.py  test_notes_parse.py  test_notes_render.py  test_pdf_extraction.py  test_probes.py  test_prompt_contracts.py  test_prompts.py  test_rejection_rate_logging.py  test_renderer.py  test_repair_clearing_rules.py  test_repair_counters.py  (+31 more)
