[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "influx"
version = "0.1.0"
description = "Influx"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Dave Snowdon" }]
dependencies = [
    "httpx>=0.27,<1",
    "python-dotenv>=1.0",
    "pydantic>=2.0,<3",
]

[project.scripts]
influx = "influx.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/influx"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "respx>=0.22",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
